@@ -229,6 +229,7 @@ Version 1.3
  - Update of Deb files from Lucas Nussbaum (Justin)
  - Pull Request #700 - Updated Linear switch configs and added Enerwave ZWN-SC7 config from Vexofp (Justin)
  - Pull Request #696 - Config for HomeSeer HSM200, add config parameters for schlage touchscreen deadbolts from gwmullin (Justin)
+ - Issue #698 - Add config file for Vision CP3102 from Erik-NA (Justin)
 
 Version 1.2 
  - Released on 15/10/14
